--- a/MarketlyBackend/src/main/resources/application.properties
+++ b/MarketlyBackend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=MarketlyBackend
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.username=root
+spring.datasource.password=Ravi@Tech18
+
+# JPA settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
